--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -1,3 +1,9 @@
 @use "./partials/variables" as *;
 
 @import "bootstrap/scss/bootstrap.scss";
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
